--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -165,8 +165,7 @@ jobs:
     - name: "Package: Install Inno Setup"
       shell: cmd
       run: |
-        curl "-kL" "https://cdn.xaymar.com/ci/innosetup-6.2.1.exe" "-f" "--retry" "5" "-o" "inno.exe"
-        .\inno.exe /VERYSILENT /SP- /SUPPRESSMSGBOXES /NORESTART
+        curl "-kL" "https://cdn.xaymar.com/ci/innosetup-6.2.1.exe" "-f" "--retry" "5" "-o" "inno.exe" .\inno.exe /VERYSILENT /SP- /SUPPRESSMSGBOXES /NORESTART
     - name: "Package"
       shell: cmd
       run: |
