--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -485,7 +485,7 @@ jobs:
       shell: bash
       run: |
         mkdir "${{ github.workspace }}/build/package"
-        cmake --build "${{ github.workspace }}/build/ci" --config Release --target PACKAGE_7Z
+        cmake --build "${{ github.workspace }}/build/ci" --config Release --target PACKAGE
     - name: "Artifacts"
       uses: actions/upload-artifact@v3
       with:
